# autotrader

./: .gitignore  README.md  docker-compose.yml  loki-config.yaml  promtail-config.yaml  prove_of_concept.ipynb  pyproject.toml
common/: config.py  kafka.py  logging_config.py  pyproject.toml
ingest/: Dockerfile  main.py  pyproject.toml
ingest/streamers/: __init__.py  base.py  demo.py  tinkoff_sandox.py
notifier/: Dockerfile  pyproject.toml
orders/: Dockerfile  main.py  pyproject.toml
processing/: Dockerfile  indicators.py  instruments.py  main.py  pyproject.toml
processing/indicators/: __init__.py  base.py  indicators.py  ma.py
risk/: pyproject.toml
strategies/: Dockerfile  main.py  pyproject.toml
tick-storage/: Dockerfile  main.py  pyproject.toml
tinkoff/: pyproject.toml
tinkoff/invest/: __init__.py  async_services.py  constants.py  schemas.py  services.py  utils.py
tinkoff/invest/caching/market_data_cache/: cache.py
tinkoff/invest/grpc/: instruments_pb2.py  instruments_pb2.pyi  instruments_pb2_grpc.py  sandbox_pb2.py  sandbox_pb2_grpc.py  users_pb2.py  users_pb2.pyi  users_pb2_grpc.py
