[project]
name = "trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.sources]
common = { workspace = true }
ingest = { workspace = true }

[tool.uv.workspace]
members = [
    "ingest",
    "processing",
    "risk",
    "orders",
    "notifier",
    "common",
]
