[project]
name = "trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.7"
dependencies = []

[tool.uv.sources]
common = { workspace = true }
tinkoff = { workspace = true } # FIXME: remove tinkoff when it's out if quarantine again  

[tool.uv.workspace]
members = [
    "ingest",
    "processing",
    "risk",
    "strategies",
    "notifier",
    "common",
    "tick-storage",
    "tinkoff" # FIXME: remove tinkoff when it's out if quarantine again  
]
